--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4",
-    "@babel/plugin-proposal-private-property-in-object": "^version"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
